src/test/deca/context/valid/ex_poly.deca
//Test extrait du poly

//Resultat: 

{
    int x ;
    x=readInt() ;
    println(0.5*(x*x)) ;
}
