src/test/deca/context/invalid/inst_print.deca
//Test lève erreur en vérifiant la regle 3.31
//Resultat: 

{
    boolean x ;
    x = true;
    print(x);
}